yiltc-go-backup/testsuite/negative/range_non_int.yilt
fn main()
    for i in "a".."b"
        print(i)
